k8s/dev/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-ui
  namespace: ms-dev
spec:
  template:
    spec:
      containers:
        - name: flask-ui
          livenessProbe:
            #httpGet:
            #  path: /
            tcpSocket:
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            #httpGet:
            #  path: /
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
