k8s/dev/flask-ui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-ui-vs
  namespace: ms-dev
spec:
  hosts:
  - flask-ui
  http:
  - route:
    - destination:
        host: flask-ui
